--- a/app/src/main/res/layout/fragment_chuck_norris_list.xml
+++ b/app/src/main/res/layout/fragment_chuck_norris_list.xml
@@ -204,7 +204,8 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/llFilterSearch"
-        tools:itemCount="4"
+        tools:itemCount="10"
+        tools:listitem="@layout/item_chucknorris_joke"
          />
 
 
