--- a/app/src/main/res/layout/fragment_chuck_norris_list.xml
+++ b/app/src/main/res/layout/fragment_chuck_norris_list.xml
@@ -144,7 +144,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvMeals"
+        android:id="@+id/rvChuckNorris"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
