Clean Code & Finishing Fix Text Search

--- a/app/src/main/res/layout/fragment_chuck_norris_list.xml
+++ b/app/src/main/res/layout/fragment_chuck_norris_list.xml
@@ -104,7 +104,7 @@
                     android:id="@+id/btnSearch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/search"
+                    android:text="@string/txtsearch"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
